# BlurEfectPerformance

./: README.md  README.txt  buildAll.sh  pruebas_GPU.sh  pruebas_omp.sh  pruebas_posix.sh  script_ejecutar_todo.sh
GPU/: Blur_gpu_color.cu  Makefile  blur-effect
OMP/: CMakeCache.txt  CMakeLists.txt  Makefile  blur-effect  blur-effect.cpp  cmake_install.cmake
Posix/: CMakeCache.txt  CMakeLists.txt  Makefile  blur-effect  blur-effect.cpp  cmake_install.cmake
