cmake_minimum_required(VERSION 2.8)
project( blur-effect )
find_package( OpenCV REQUIRED )
find_package (Threads)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_compile_options(-std=c++11)
add_compile_options(-pthread)
add_executable( blur-effect blur-effect.cpp )
target_link_libraries( blur-effect ${OpenCV_LIBS} )
target_link_libraries( blur-effect ${CMAKE_THREAD_LIBS_INIT} )
